--- a/toyota.css
+++ b/toyota.css
@@ -1,7 +1,7 @@
 h1 {
 
   font-family: Arial, Helvetica, sans-serif;
-  margin-inline: 27%;
+  margin-inline-start: 40%;
 }
 .first {
   display: inline-block;
