--- a/toyota.css
+++ b/toyota.css
@@ -39,7 +39,7 @@ h1 {
   margin-block: 3%;
   font-size: 100px;
   letter-spacing: 30px;
-  -webkit-text-stroke: 3px black;
+  /* -webkit-text-stroke: 3px black;  */
   font-weight: 600;
   font-family: Arial, Helvetica, sans-serif;
 }
